--- a/CarRacing/CarRacing/CarRacing.csproj
+++ b/CarRacing/CarRacing/CarRacing.csproj
@@ -110,5 +110,8 @@
   <ItemGroup>
     <None Include="Resources\gameover1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hit.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
