--- a/CarRacing/CarRacing/CarRacing.csproj
+++ b/CarRacing/CarRacing/CarRacing.csproj
@@ -52,6 +52,12 @@
     <Compile Include="CarRacing.Designer.cs">
       <DependentUpon>CarRacing.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainManu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainManu.Designer.cs">
+      <DependentUpon>MainManu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CarRacing.resx">
