--- a/CarRacing/CarRacing/CarRacing.csproj
+++ b/CarRacing/CarRacing/CarRacing.csproj
@@ -52,16 +52,19 @@
     <Compile Include="CarRacing.Designer.cs">
       <DependentUpon>CarRacing.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainManu.cs">
+    <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainManu.Designer.cs">
-      <DependentUpon>MainManu.cs</DependentUpon>
+    <Compile Include="MainMenu.Designer.cs">
+      <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CarRacing.resx">
       <DependentUpon>CarRacing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenu.resx">
+      <DependentUpon>MainMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -118,6 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\hit.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\picture background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Start-Button-Vector.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
